--- a/LechebnikProject/LechebnikProject.csproj
+++ b/LechebnikProject/LechebnikProject.csproj
@@ -69,6 +69,7 @@
     </ApplicationDefinition>
     <Compile Include="Helpers\BooleanToStringConverter.cs" />
     <Compile Include="Helpers\CaptchaHelper.cs" />
+    <Compile Include="Helpers\ImageHelper.cs" />
     <Compile Include="Helpers\RoleToVisibilityConverter.cs" />
     <Compile Include="Helpers\SenderRoleToColorConverter.cs" />
     <Compile Include="Helpers\WindowManager.cs" />
