fix bugs, more updates

--- a/LechebnikProject/App.config
+++ b/LechebnikProject/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="LechebnikConnection" connectionString="Server=SPECTRAPRIME;Database=LechebnikProject;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+		<add name="DefaultConnection" connectionString="Server=Имя_сервера;Database=Имя_базы_данных;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
